syntax = "proto3";
package auth;

option java_multiple_files = false; // 表示下面的message不需要编译成多个java文件
option java_outer_classname = "AuthGrpc"; // 表示下面的message编译成的java类文件的名字
option java_package = "team.simpleVirtualWallet.beAuth.beAuthService.service.grpc"; //指定该proto文件编译成的java源文件的包名



message LoginReq {
  string account = 1;
  string password = 2;
}

message LoginRes {
  string accessToken = 1;
  string renewToken = 2;
}

message CheckTokenReq {
  string accessToken = 1;
}

message CheckTokenRes {
  uint64 id = 1;
  string account = 2;
}

service AuthService {
  rpc Login(LoginReq) returns (LoginRes) {};
  rpc CheckToken(CheckTokenReq) returns (CheckTokenRes) {};
}